# AoC2024

./: Cargo.toml  LICENSE  README.md
benches/: benches.rs
src/: day1.rs  day_template.rs  main.rs
